# SignalGate

./: .gitignore  README.md  event.json  pyproject.toml
.github/workflows/: signalgate_dryrun.yml
config/: README.md  bets.example.yaml  bets.yaml  rules.example.yaml  rules.yaml  sources.example.yaml
data/: README.md
fixtures/: event_sell.json
signalgate/: README.md  __main__.py  audit.py  core.py  decision.py  fetch.py  gate.py  ingest_cli.py  ingress.py  interrupt.py  models.py  notify.py  paths.py
